Add CRUD guard, harden MultiRequestBody resolver, and normalize codebase style.
Introduce read-only database enforcement with admin UI and interceptors, fix parseAllFields error handling plus null-safety in MultiRequestBodyArgumentResolver, remove unused imports project-wide, standardize logs to English, and add Java FQN CI checks.

Co-authored-by: Cursor <cursoragent@cursor.com>